# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//packages/package.gni")

package("googleapis") {
  app = true

  deps = [
    "//apps/modules/googleapis/agents",
    "//apps/modules/googleapis/services",
  ]

  binaries = [
    {
      name = "googleapis/gmail"
      source = "gmail.dartx"
    },
  ]
}

package("test") {
  testonly = true
  app = true

  deps = []
}
